# falco_plugin

./: .release-plz.toml  Cargo.toml  Containerfile  README.md  merge-cdx.py
.github/workflows/: ci-actions.yaml  ci-code.yaml  release-image.yaml  release.yaml
examples/: README.md  example-config.yaml  example-rule.yaml  falco-helm-values.yaml  test-config.yaml
hack/proto/: buf.gen.control.yaml  gen.sh  install-tools.sh  versions.sh
src/: lib.rs  parsers.rs  threadstate.rs
src/base_plugin/: mod.rs
src/extract_plugin/: mod.rs
src/parse_plugin/: mod.rs
src/proto/: generated.rs
src/source_plugin/: mod.rs
src/source_plugin/client/: enabled_syscalls.rs  mod.rs  zone_creation_watcher.rs
src/source_plugin/client/edera_client/: client.rs  dial.rs  events.rs  mod.rs  unix.rs  zone_watcher.rs
